# notary

./: Cargo.toml
notary-client/: Cargo.toml
notary-client/src/: client.rs
notary-common/: Cargo.toml
notary-server/: Cargo.toml
