[workspace]
resolver = "3"
members = ["notary-client", "notary-server", "notary-common"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints]
rust.unused_imports = "warn"
rust.dead_code = "warn"

[workspace.dependencies]
derive_builder = { version = "0.12" }
futures = { version = "0.3" }
http-body-util = { version = "0.1" }
hyper = { version = "1.1" }
# hyper-util = { version = "0.1" }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
# tokio = { version = "1.38" }
# tokio-rustls = { version = "0.24" }
tracing = { version = "0.1" }
serde = { version = "1.0.219", features = ["derive"] }
webpki-roots = { version = "0.26.11" }
smol = { version = "2.0.2" }
smol-hyper = "0.1.1"
futures-rustls = { version = "0.25" }


notary-common = { path = "notary-common" }
notary-server = { path = "notary-server" }
notary-client = { path = "notary-client" }
